--- a/app/views/wizard/wizard_opq_device.scala.html
+++ b/app/views/wizard/wizard_opq_device.scala.html
@@ -17,22 +17,23 @@
     Copyright 2013 Anthony Christe
 *@
 
+@(opqDeviceForm: Form[models.OpqDevice])
+
+@import helper._
+  @implicitFieldConstructor = @{
+    FieldConstructor(twitterBootstrapInput.render)
+  }
+
 <div class="row">
     <div class="span9">
-        <form class="form-horizontal">
-            <div class="control-group">
-                <label class="control-label" for="deviceId">Device Id</label>
-                <div class="controls">
-                    <input type="text" id="deviceId" placeholder="0123-4567-89AB-CDEF" required>
-                </div>
-            </div>
-            <div class="control-group">
-                <label class="control-label" for="deviceDescription">Device Description</label>
-                <div class="controls">
-                    <input type="text" id="deviceDescription" placeholder="Office" required>
-                </div>
-            </div>
-        </form>
+      @inputText(opqDeviceForm("deviceId"), '_label -> "Device Id", 'placeholder -> "0123-4567-89AB-CDEF", 'id -> "deviceId")
+      @inputText(opqDeviceForm("description"), '_label -> "Device Description", 'placeholder -> "office", 'id -> "deviceDescription")
+      @select(
+        opqDeviceForm("state"),
+        options = options(utils.FormUtils.LIST_OF_STATES),
+        '_label -> "State",
+        '_default -> "Hawaii",
+        'id -> "deviceState")
     </div>
     <div class="span3">
         <div class="well well-small">
