Updated to pull from list of states rather than array of states.

--- a/app/views/admin/admincdsi.scala.html
+++ b/app/views/admin/admincdsi.scala.html
@@ -32,7 +32,7 @@
             <div>
                 <input type="checkbox" value="true" id="state_checkbox" name="checkbox">
                 <select>
-                    @for(state <- utils.FormUtils.LIST_OF_STATES) {
+                    @for(state <- utils.FormUtils.ARRAY_OF_STATES) {
                         <option>@state</option>
                     }
                 </select>
