--- a/app/views/admin/adminuser.scala.html
+++ b/app/views/admin/adminuser.scala.html
@@ -47,7 +47,7 @@
                 <span class="help-inline">Verify Password <b>*</b></span>
                 <br />
                 <select>
-                    @for(state <- utils.FormUtils.LIST_OF_STATES) {
+                    @for(state <- utils.FormUtils.ARRAY_OF_STATES) {
                         <option>@state</option>
                     }
                 </select>
