--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -24,7 +24,7 @@
             <p>To get started, select one of the two options below.</p>
             <p>
                 <a class="btn btn-large btn-inverse" href="@routes.Wizard.index()"><span class="btn-label">Set Up Device</span></a>
-                <a class="btn btn-large btn-primary" href="#"><span class="btn-label">Login</span></a>
+                <a class="btn btn-large btn-primary" href="@routes.Application.login()"><span class="btn-label">Login</span></a>
             </p>
         </div>
         <div class="row main-features">
