--- a/public/stylesheets/opq-ao.css
+++ b/public/stylesheets/opq-ao.css
@@ -2,6 +2,28 @@
     margin-top: 10px;
 }
 
+/* Form errors */
+.error {
+    text-align: center;
+    font-weight: bold;
+    color: red;
+}
+
+/* Login Form */
+[class*="span"].centered {
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+}
+
+#login-form .form-horizontal .control-group {
+    margin-bottom: 10px;
+}
+
+#login-form h3 {
+    text-align: center;
+}
+
 /* Wizard Styles */
 .step-pane {
     padding-top: 10px;
