--- a/app/views/wizard/wizard_user_info.scala.html
+++ b/app/views/wizard/wizard_user_info.scala.html
@@ -35,8 +35,8 @@ Copyright 2013 Anthony Christe
       personForm("state"),
       options = options(utils.FormUtils.LIST_OF_STATES),
       '_label -> "State",
-      '_default -> "Hawaii",
-      'id -> "state")
+      '_default -> "--- Select State ---",
+      'id -> "personState")
   </div>
   <div class="span3">
     <div class="well well-small">
