--- a/app/views/admin/admindevice.scala.html
+++ b/app/views/admin/admindevice.scala.html
@@ -1,76 +1,118 @@
 @*
-    This file is part of opq-ao.
+This file is part of opq-ao.
 
-    opa-ao is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+opa-ao is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-    opa-ao is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+opa-ao is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with opq-ao.  If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU General Public License
+along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 
-    Copyright 2013 Anthony Christe
+Copyright 2013 Anthony Christe
 *@
 
+@(opqDeviceForm: Form[models.OpqDevice], opqDeviceForms: List[Form[models.OpqDevice]])
+
+@import helper._
+  @implicitFieldConstructor = @{
+    FieldConstructor(twitterBootstrapInput.render)
+  }
+
 @admin("Device Administration",
-    "This page allows you to add and configure devices.") {
-    <div class="span6">
-        <form class="form-vertical well well-small">
-            <label class="control-label">
-                <b>Register New OPQ Device</b>
-            </label>
-            <br>
-            <div>
-                <input type="text" class="input-medium">
-                <span class="help-inline">OPQ Device ID</span>
-            </div>
-            <input type="text" class="input-medium">
-            <span class="help-inline">Description</span>
-            <button type="submit" class="btn btn-primary pull-right">Register Device</button>
-        </form>
-        <table class="table well well-small">
-            <thead>
-                <tr>
-                    <th>Registered OPQ Devices</th>
-                    <th>Description</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>0123-4567-89AB-CDEF</td>
-                    <td>Home</td>
-                    <td>
-                        <a class="btn btn-danger pull-right">Remove</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>ABCD-EF01-2345-6789</td>
-                    <td>Office</td>
-                    <td>
-                        <a class="btn btn-danger pull-right">Remove</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="span2 well well-small">
-        <p>
-            <b>Register new OPQ device</b>
-            <br> The device ID is a squence of 16 characters and letters that should have
-            been supplied with your OPQ device.
+  "This page allows you to add and configure devices.") {
+  <div class="span7">
+    <table class="table well well-small">
+      @if(flash.contains("updated")) {
+        <p class="success">
+        @flash.get("updated")
         </p>
-        <p>
-            <b>Registered OPQ Devices</b>
-            <br> This lists the devices that are currently registered to your account.
-            <br>
-            <br>
-            <br>
+      }
+      @if(flash.contains("added")) {
+        <p class="success">
+        @flash.get("added")
         </p>
-    </div>
+      }
+      <thead>
+        <tr>
+          <th>Device Id</th>
+          <th>Description</th>
+          <th>State</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        @for(deviceForm <- opqDeviceForms) {
+          <tr>
+          @form(routes.Administration.updateDevice(deviceForm("deviceId").value), 'class -> "form-inline") {
+            <td>@inputText(deviceForm("deviceId"), '_showConstraints -> false, '_label -> "", 'readonly -> "readonly", 'class -> "input-medium")</td>
+            <td>@inputText(deviceForm("description"), '_showConstraints -> false, '_label -> "", 'class -> "input-small")</td>
+            <td>@select(
+              deviceForm("state"),
+              options = options(utils.FormUtils.LIST_OF_STATES),
+              '_label -> "",
+              '_showConstraints -> false,
+              'id -> "deviceState",
+              'class -> "input-medium")</td>
+            <td>
+              <input type="submit" class="btn btn-warning pull-right" value="Update">
+            </td>
+          }
+          </tr>
+        }
+        @form(routes.Administration.saveDevice(), 'class -> "form-inline") {
+          <tr>
+            <td>
+            @inputText(opqDeviceForm("deviceId"),
+              '_label -> "",
+              'placeholder -> "0123-4567-89AB-CDEF",
+              '_showConstraints -> false,
+              'class -> "input-medium",
+              'id -> "deviceId")
+            </td>
+            <td>
+            @inputText(opqDeviceForm("description"),
+              '_label -> "",
+              'placeholder -> "Office",
+              '_showConstraints -> false,
+              'class -> "input-small",
+              'id -> "deviceDescription")
+            </td>
+            <td>
+            @select(
+              opqDeviceForm("state"),
+              options = options(utils.FormUtils.LIST_OF_STATES),
+              '_label -> "",
+              '_showConstraints -> false,
+              '_default -> "--- Select State ---",
+              'id -> "deviceState",
+              'class -> "input-medium")
+            </td>
+            <td>
+              <input type="submit" value="Add Device" class="btn btn-primary pull-right" />
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+  <div class="span2 well well-small">
+    <p>
+      <b>Register new OPQ device</b>
+      <br> The device ID is a squence of 16 characters and letters that should have
+      been supplied with your OPQ device.
+    </p>
+    <p>
+      <b>Registered OPQ Devices</b>
+      <br> This lists the devices that are currently registered to your account.
+      <br>
+      <br>
+      <br>
+    </p>
+  </div>
 }
