--- a/public/stylesheets/opq-ao.css
+++ b/public/stylesheets/opq-ao.css
@@ -2,11 +2,22 @@
     margin-top: 10px;
 }
 
-/* Form errors */
+/* Form Messages */
 .error {
     text-align: center;
     font-weight: bold;
     color: red;
+}
+
+.success {
+    text-align: center;
+    font-weight: bold;
+    color: green;
+}
+
+/* Form Misc */
+#removeDeviceBtn {
+    margin-left: 5px;
 }
 
 /* Login Form */
